test/types/range/vass/indexorder-nofirst-2.chpl

const i = (..10).indexOrder(5);
writeln(i);
